Add Magic tricks of testing talk.

--- a/talks/index.html
+++ b/talks/index.html
@@ -639,31 +639,6 @@
         <div class="panel">
             <div class="media">
                 <div class="media-left">
-                    <a href="https://skillsmatter.com/skillscasts/5899-modelling-by-example">
-                        <img
-                            class="media-object"
-                            src="https://i.vimeocdn.com/video/495636915.jpg?mw=120&mh=90"
-                            alt="Modelling by example"
-                        >
-                    </a>
-                </div>
-                <div class="media-body">
-                    <h4 class="media-heading">
-                        Modelling by example <small>Konstantin Kudriashov</small>
-                    </h4>
-                    <p>
-                        Use BDD scenarios to drive the design of your core domain model. <strong>
-                        Reduce translation costs</strong> by using the ubiquitous language in both
-                        your scenarios and your model.
-                    </p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="col-sm-6">
-        <div class="panel">
-            <div class="media">
-                <div class="media-left">
                     <a href="https://www.youtube.com/watch?v=9mLK_8hKii8">
                         <img
                             class="media-object"
@@ -679,6 +654,228 @@
                     <p>
                         Pay attention to your objects messages. Always seek for abstractions,
                         because <strong>nothing is always something</strong>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-6">
+        <div class="panel">
+            <div class="media">
+                <div class="media-left">
+                    <a href="https://skillsmatter.com/skillscasts/5899-modelling-by-example">
+                        <img
+                            class="media-object"
+                            src="https://i.vimeocdn.com/video/495636915.jpg?mw=120&mh=90"
+                            alt="Modelling by example"
+                        >
+                    </a>
+                </div>
+                <div class="media-body">
+                    <h4 class="media-heading">
+                        Modelling by example <small>Konstantin Kudriashov</small>
+                    </h4>
+                    <p>
+                        Use BDD scenarios to drive the design of your core domain model. <strong>
+                            Reduce translation costs</strong> by using the ubiquitous language in both
+                        your scenarios and your model.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-6">
+        <div class="panel">
+            <div class="media">
+                <div class="media-left">
+                    <a href="https://www.youtube.com/watch?v=BDagiC8Sw48">
+                        <img
+                            class="media-object"
+                            src="http://i3.ytimg.com/vi/BDagiC8Sw48/1.jpg"
+                            alt="You can’t fight Conway’s law"
+                        >
+                    </a>
+                </div>
+                <div class="media-body">
+                    <h4 class="media-heading">
+                        You can’t fight Conway’s law <small>Avraham Poupko</small>
+                    </h4>
+                    <p>
+                        Conway's law: Any organization that designs a system will inevitably produce
+                        a design whose structure is a copy of the organization's communication
+                        structure.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-6">
+        <div class="panel">
+            <div class="media">
+                <div class="media-left">
+                    <a href="https://vimeo.com/80533536">
+                        <img
+                            class="media-object"
+                            src="https://i.vimeocdn.com/video/456490527_100x75.jpg"
+                            alt="Integrated Tests Are A Scam"
+                        >
+                    </a>
+                </div>
+                <div class="media-body">
+                    <h4 class="media-heading">
+                        Integrated Tests Are A Scam <small>J. B. Rainsberger</small>
+                    </h4>
+                    <p>
+                        The more integrated tests we have, the less design feedback we get.
+                        It produces a positive feedback loop of negative feelings.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-6">
+        <div class="panel">
+            <div class="media">
+                <div class="media-left">
+                    <a href="https://www.youtube.com/watch?v=NZ5mI6-tNUc">
+                        <img
+                            class="media-object"
+                            src="http://i3.ytimg.com/vi/NZ5mI6-tNUc/3.jpg"
+                            alt="Design matters"
+                        >
+                    </a>
+                </div>
+                <div class="media-body">
+                    <h4 class="media-heading">
+                        Design matters <small>Rebecca Wirfs-Brock</small>
+                    </h4>
+                    <p>
+                        Reshape your design heuristics based on what you learn from your designs
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-6">
+        <div class="panel">
+            <div class="media">
+                <div class="media-left">
+                    <a href="https://www.youtube.com/watch?v=RAxiiRPHS9k">
+                        <img
+                            class="media-object"
+                            src="http://i3.ytimg.com/vi/RAxiiRPHS9k/1.jpg"
+                            alt="Fast test, slow test"
+                        >
+                    </a>
+                </div>
+                <div class="media-body">
+                    <h4 class="media-heading">
+                        Fast test, slow test <small>Gary Bernhardt</small>
+                    </h4>
+                    <p>
+                        The goals of tests: prevent regression, prevent fear (of breaking something),
+                        prevent bad design.
+                        What makes a <strong>unit test</strong>? 1. They test only one object's
+                        behavior, 2. Other classes can't break it
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-6">
+        <div class="panel">
+            <div class="media">
+                <div class="media-left">
+                    <a href="https://www.youtube.com/watch?v=fnRwfjMqKM8">
+                        <img
+                            class="media-object"
+                            src="http://i3.ytimg.com/vi/fnRwfjMqKM8/2.jpg"
+                            alt="Development, by the numbers"
+                        >
+                    </a>
+                </div>
+                <div class="media-body">
+                    <h4 class="media-heading">
+                        Development, by the numbers <small>Anthony Ferrara</small>
+                    </h4>
+                    <p>
+                        How can we objectively quantify whether code is good or if it needs
+                        improving?
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-6">
+        <div class="panel">
+            <div class="media">
+                <div class="media-left">
+                    <a href="https://www.youtube.com/watch?v=ZsHMHukIlJY">
+                        <img
+                            class="media-object"
+                            src="http://i3.ytimg.com/vi/ZsHMHukIlJY/3.jpg"
+                            alt="Seven ineffective coding habits of many programmers"
+                        >
+                    </a>
+                </div>
+                <div class="media-body">
+                    <h4 class="media-heading">
+                        Seven ineffective coding habits of many programmers
+                        <small>Kevlin Henney</small>
+                    </h4>
+                    <p>
+                        Noisy code, unsustainable spacing, lego naming, underabstraction,
+                        unencapsulated state, getters and setters, uncohesive tests
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-6">
+        <div class="panel">
+            <div class="media">
+                <div class="media-left">
+                    <a href="https://www.youtube.com/watch?v=kIKwPNKXaLU">
+                        <img
+                            class="media-object"
+                            src="http://i3.ytimg.com/vi/kIKwPNKXaLU/1.jpg"
+                            alt="Tackling Complexity in the Heart of Software"
+                        >
+                    </a>
+                </div>
+                <div class="media-body">
+                    <h4 class="media-heading">
+                        Tackling Complexity in the Heart of Software <small>Eric Evans</small>
+                    </h4>
+                    <p>
+                        What does <strong>Domain-Driven Design</strong> look like in 2017? We have
+                        more experience now. We have better tools now. We have an architectural
+                        environment better suited to DDD.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-6">
+        <div class="panel">
+            <div class="media">
+                <div class="media-left">
+                    <a href="https://www.youtube.com/watch?v=URSWYvyc42M">
+                        <img
+                            class="media-object"
+                            src="http://i3.ytimg.com/vi/URSWYvyc42M/1.jpg"
+                            alt="The Magic Tricks of Testing"
+                        >
+                    </a>
+                </div>
+                <div class="media-body">
+                    <h4 class="media-heading">
+                        The Magic Tricks of Testing <small>Sandy Metz</small>
+                    </h4>
+                    <p>
+                        Why do you hate your tests? They're slow. They're fragile. They're expensive.
+                        There's a few tricks to fix these problems. They'll make your tests: thorough,
+                        stable, fast, and few.
                     </p>
                 </div>
             </div>
