Add Software that fits in your head talk

--- a/talks/index.html
+++ b/talks/index.html
@@ -881,6 +881,30 @@
             </div>
         </div>
     </div>
+    <div class="col-sm-6">
+        <div class="panel">
+            <div class="media">
+                <div class="media-left">
+                    <a href="https://www.youtube.com/watch?v=4Y0tOi7QWqM">
+                        <img
+                            class="media-object"
+                            src="http://i3.ytimg.com/vi/4Y0tOi7QWqM/1.jpg"
+                            alt="Software that Fits in Your Head"
+                        >
+                    </a>
+                </div>
+                <div class="media-body">
+                    <h4 class="media-heading">
+                        Software that Fits in Your Head <small>Dan North</small>
+                    </h4>
+                    <p>
+                        Code is not asset, code is cost. Code should be stabilised or killed off
+                        fast!
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
 </main>            </div>
         </div>
     </div>
