--- a/source/cv.html
+++ b/source/cv.html
@@ -22,14 +22,16 @@ title: Curriculum
                         San Antonio TX
                     </p>
                     <p>
-                        He programado profesionalmente, desde que me gradué de la Maestría en
-                        Ciencias de la Computación en 2005. Tengo más de 12 años de experiencia en
-                        el área, tanto en México como en Estados Unidos.
+                        Soy <strong>desarrollador full-stack</strong> e
+                        <strong>instructor de programación</strong>. Me gusta estar rodeado de
+                        gente que me motive a hacer el mejor trabajo de mi carrera así como de gente
+                        a la que pueda ayudar a crecer profesionalmente.
                     </p>
                     <p>
-                        Estoy buscando formar parte de un equipo de desarrollo que valore el
-                        equilibrio trabajo-vida y que practique TDD, pair programming y
-                        revisiones de código.
+                        Tengo más de <strong>13 años de experiencia</strong> en el área de
+                        programación tanto en México como en Estados Unidos y estoy en busca de ser
+                        parte de un equipo que valore el equilibrio trabajo-vida, TDD, pair
+                        programming and revisiones de código.
                     </p>
                 </div>
             </div>
