--- a/en/cv/index.html
+++ b/en/cv/index.html
@@ -102,13 +102,15 @@
                         San Antonio TX
                     </p>
                     <p>
-                        I've been programming professionally since graduating with a
-                        Master's Degree in Computer Science in 2005. I have over 12
-                        years of experience in tech both in Mexico and the United States.
+                        I'm a <strong>full-stack developer</strong> and
+                        a <strong>programming instructor</strong>. I like to be surrounded by
+                        people who push me to do the best work of my career as well as people I can
+                        nurture and support.
                     </p>
                     <p>
-                        I am looking forward to be part of a development team that values
-                        work-life balance and practices TDD, pair programming and code reviews.
+                        I have over <strong>13 years of experience</strong> in tech both in Mexico
+                        and the United States and I’m looking forward to be part of a team that
+                        values work-life balance, TDD, pair programming and code reviews.
                     </p>
                 </div>
             </div>
@@ -297,7 +299,7 @@
 
     <footer>
         <div class="container">
-    2014 - 2017 Luis Montealegre
+    2014 - 2018 Luis Montealegre
     <p  class="pull-right">
         <a href="http://creativecommons.org/licenses/by-nc/2.5/">
             <img src="/images/cc.primary.srr.gif" alt="Algunos derechos reservados">
