feature: Add more details to my current role at Codeup

--- a/source/en/cv.html
+++ b/source/en/cv.html
@@ -50,34 +50,34 @@ title: Curriculum
                 <ul class="list-group">
                     <li class="list-group-item">
                         <em>Codeup [01/16 – current]</em>.
-                        <strong>Web development Instructor</strong>.
+                        <strong>Web developer and Instructor</strong>.
                         <p>
-                            I am currently working in SA. TX. as a full-time instructor teaching
-                            either <strong>PHP (Laravel)</strong> or <strong>Java (Spring Boot)
-                            </strong> to entry-level full-stack developers. My activities as
-                            instructor include <strong>pair programming</strong> and <strong>code
-                            reviews</strong> with the students.
+                            I am currently working in SA. TX. as a web developer and instructor teaching
+                            <strong>Java (Spring Boot)</strong> to entry-level full-stack developers.
                         </p>
                         <p>
-                            During the last year I collaborated a couple of times with 2 open source
-                            projects:
-                            <a href="https://drupalconsole.com" target="_blank" rel="noopener">
-                                Drupal Console
-                            </a>, proposing some guidelines to improve the testing coverage for the
-                            project (
-                            <a
-                                href="https://github.com/hechoendrupal/drupal-console/pull/2891"
-                                target="_blank"
-                                rel="noopener"
-                            >
-                                #2891
-                            </a> is a good example), and
+                            As an instructor I introduce students to the practices and values to
+                            work effectively in teams, in order to present their first software product
+                            after 18 weeks of intensive training in Web development
+                        </p>
+                        <p>
+                            My main contributions so far include: 1) The introduction of pair programming to solve
+                            medium/large exercises. 2) A change in the way we teach Git and Github which is now
+                            something we deliver incrementally since day one. 3) Students now have the chance
+                            to learn how to use Github issues and Pull Requests during their first project in teams.
+                            4) I also introduced a shorter feedback loop process during their final projects, which
+                            is a 2 week period, by implementing daily demos.
+                            I also review their code during that period.
+                            These changes have improved the experience and the results achieved by our students.
+                        </p>
+                        <p>
+                            During the last year I contributed to the PHP testing framework
                             <a
                                 href="http://codeception.com" target="_blank"
                                 rel="noopener"
                             >
                                 Codeception
-                            </a>, adding support for PHPUnit 6 (
+                            </a> by adding support for PHPUnit 6 (
                             <a
                                 href="https://github.com/Codeception/Codeception/pull/4142"
                                 target="_blank"
@@ -85,8 +85,34 @@ title: Curriculum
                             >
                                 #4142
                             </a>
-                            ). I also had the chance to attend <strong>"Uncle" Bob’s</strong>
-                            Clean Code workshop last year in Austin.
+                            ).
+                            I released a
+                            <a
+                                href="https://github.com/MontealegreLuis/yelpv3-java-client"
+                                target="_blank"
+                                rel="noopener"
+                            >
+                                Java client
+                            </a>
+                            for the YELP API.
+                            I became the new maintainer of a
+                            <a
+                                href="https://github.com/MontealegreLuis/phuml"
+                                target="_blank"
+                                rel="noopener"
+                            >
+                                PHP package
+                            </a>
+                            to generate UML class diagrams.
+                            I also had the chance to attend the
+                            <a
+                                href="http://exploreddd.com/"
+                                target="_blank"
+                                rel="noopener"
+                            >
+                                Explore DDD
+                            </a>
+                            conference last year in Denver.
                         </p>
                     </li>
                     <li class="list-group-item">
