--- a/talks/index.html
+++ b/talks/index.html
@@ -860,6 +860,32 @@
         <div class="panel">
             <div class="media">
                 <div class="media-left">
+                    <a href="https://www.youtube.com/watch?v=UgrVdHYEZGg">
+                        <img
+                            class="media-object"
+                            src="http://i3.ytimg.com/vi/UgrVdHYEZGg/1.jpg"
+                            alt="The Insufficiency of Good Design"
+                        >
+                    </a>
+                </div>
+                <div class="media-body">
+                    <h4 class="media-heading">
+                        The Insufficiency of Good Design <small>Sarah Mei</small>
+                    </h4>
+                    <p>
+                        It's the communication patterns in a group rather than the individuals
+                        within it that determine whether or not they produce good code together.
+                        Your team's communication patterns are the best predictor of the quality
+                        of the code you produce.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-6">
+        <div class="panel">
+            <div class="media">
+                <div class="media-left">
                     <a href="https://www.youtube.com/watch?v=URSWYvyc42M">
                         <img
                             class="media-object"
@@ -885,6 +911,32 @@
         <div class="panel">
             <div class="media">
                 <div class="media-left">
+                    <a href="https://www.youtube.com/watch?v=0o9_zjZeJuE">
+                        <img
+                            class="media-object"
+                            src="http://i3.ytimg.com/vi/0o9_zjZeJuE/1.jpg"
+                            alt="Visualise, Document & Explore your Software Architecture"
+                        >
+                    </a>
+                </div>
+                <div class="media-body">
+                    <h4 class="media-heading">
+                        Visualise, Document & Explore your Software Architecture <small>Simon Brown</small>
+                    </h4>
+                    <p>
+                        The C4 model offers 4 diagrams to communicate software architecture:
+                        <strong>System Context</strong>, <strong>Containers</strong>,
+                        <strong>Components</strong> and <strong>Code</strong>. Documentation should
+                        describe what the code doesn't.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-6">
+        <div class="panel">
+            <div class="media">
+                <div class="media-left">
                     <a href="https://www.youtube.com/watch?v=4Y0tOi7QWqM">
                         <img
                             class="media-object"
@@ -900,32 +952,6 @@
                     <p>
                         Code is not asset, code is cost. Code should be stabilised or killed off
                         fast!
-                    </p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="col-sm-6">
-        <div class="panel">
-            <div class="media">
-                <div class="media-left">
-                    <a href="https://www.youtube.com/watch?v=UgrVdHYEZGg">
-                        <img
-                            class="media-object"
-                            src="http://i3.ytimg.com/vi/UgrVdHYEZGg/1.jpg"
-                            alt="The Insufficiency of Good Design"
-                        >
-                    </a>
-                </div>
-                <div class="media-body">
-                    <h4 class="media-heading">
-                        The Insufficiency of Good Design <small>Sarah Mei</small>
-                    </h4>
-                    <p>
-                        It's the communication patterns in a group rather than the individuals
-                        within it that determine whether or not they produce good code together.
-                        Your team's communication patterns are the best predictor of the quality
-                        of the code you produce.
                     </p>
                 </div>
             </div>
