Update bootstrap URLs

--- a/archivo/index.html
+++ b/archivo/index.html
@@ -13,7 +13,7 @@
 >
 <link
     rel="stylesheet"
-    href="http://netdna.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+    href="https://netdna.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
 >
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -389,7 +389,7 @@
         <div class="container">
     2014 - 2018 Luis Montealegre
     <p  class="pull-right">
-        <a href="http://creativecommons.org/licenses/by-nc/2.5/">
+        <a href="https://creativecommons.org/licenses/by-nc/2.5/">
             <img src="/images/cc.primary.srr.gif" alt="Algunos derechos reservados">
         </a>
     </p>
@@ -397,7 +397,7 @@
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-<script src="http://netdna.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
+<script src="https://netdna.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 </script>
     <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
