chore: Update home page

--- a/en/index.html
+++ b/en/index.html
@@ -82,7 +82,7 @@
         <div class="container">
             <div class="welcome">
                 <h1>Luis Montealegre</h1>
-                <h2>Web Developer</h2>
+                <h2>Software Engineer</h2>
                 <ul class="social">
                     <li>
                         <a href="http://twitter.com/MontealegreLuis" class="link-icon" target="_blank">
@@ -182,7 +182,7 @@
             </p>
             <p>
                 I love to spend my spare time with my wife (<strong>Meri</strong>) and my two
-                children (<strong>Mario</strong> and <strong>Alejandro</strong>, 5 and 3 years old
+                children (<strong>Mario</strong> and <strong>Alejandro</strong>, 6 and 4 years old
                 respectively). Things I enjoy the most: coffee, pizza, sushi, dark beer and science
                 fiction movies.
             </p>
@@ -211,40 +211,6 @@
                     <img src="/images/contact.png">
                 </a>
             </h3>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-sm-4">
-            <figure class="text-center">
-                <img
-                    src="/images/uncle-bob.jpg"
-                    class="img-responsive img-rounded center-block"
-                    alt="Con Uncle Bob"
-                    title="Con Uncle Bob"
-                >
-                <figcaption>Uncle Bob</figcaption>
-            </figure>
-        </div>
-        <div class="col-sm-4">
-            <figure class="text-center">
-                <img
-                    src="/images/comunidad.jpg"
-                    class="img-responsive img-rounded center-block"
-                    alt="Amigos comunidad"
-                >
-                <figcaption>My friends in Puebla</figcaption>
-            </figure>
-        </div>
-        <div class="col-sm-4">
-            <figure class="text-center">
-                <img
-                    src="/images/eric-evans.jpg"
-                    class="img-responsive img-rounded center-block"
-                    alt="Con Eric Evans"
-                    title="Con Eric Evans"
-                >
-                <figcaption>Eric Evans</figcaption>
-            </figure>
         </div>
     </div>
 </section>    </div>
