--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div class="container">
             <div class="welcome">
                 <h1>Luis Montealegre</h1>
-                <h2>Desarrollador Web</h2>
+                <h2>Ingeniero de Software</h2>
                 <ul class="social">
                     <li>
                         <a href="http://twitter.com/MontealegreLuis" class="link-icon" target="_blank">
@@ -177,7 +177,7 @@
             </p>
             <p>
                 Fuera de mi trabajo me gusta pasar tiempo con mi esposa (Meri) y mis dos
-                hijos (Mario de 5 años y Alejandro de 3). Soy fan del café cargado y sin
+                hijos (Mario de 6 años y Alejandro de 4). Soy fan del café cargado y sin
                 azucar, de la pizza, el sushi, la cerveza oscura y de las películas de
                 ciencia ficción.
             </p>
@@ -209,40 +209,6 @@
                     <img src="/images/contact.png">
                 </a>
             </h3>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-sm-4">
-            <figure class="text-center">
-                <img
-                    src="/images/uncle-bob.jpg"
-                    class="img-responsive img-rounded center-block"
-                    alt="Con Uncle Bob"
-                    title="Con Uncle Bob"
-                >
-                <figcaption>Uncle Bob</figcaption>
-            </figure>
-        </div>
-        <div class="col-sm-4">
-            <figure class="text-center">
-                <img
-                    src="/images/comunidad.jpg"
-                    class="img-responsive img-rounded center-block"
-                    alt="Amigos comunidad"
-                >
-                <figcaption>Amigos en Puebla</figcaption>
-            </figure>
-        </div>
-        <div class="col-sm-4">
-            <figure class="text-center">
-                <img
-                    src="/images/eric-evans.jpg"
-                    class="img-responsive img-rounded center-block"
-                    alt="Con Eric Evans"
-                    title="Con Eric Evans"
-                >
-                <figcaption>Eric Evans</figcaption>
-            </figure>
         </div>
     </div>
 </section>    </div>
