chore: Use software engineer instead of web developer

--- a/source/cv.html
+++ b/source/cv.html
@@ -6,7 +6,7 @@ title: Curriculum
     <div class="media col-sm-12 avatar">
         <div class="panel panel-primary">
             <div class="panel-heading">
-                <h1 class="title">Luis Montealegre <small>Desarrollador Web</small></h1>
+                <h1 class="title">Luis Montealegre <small>Ingeniero de Software</small></h1>
             </div>
             <div class="panel-body">
                 <div class="media-left media-middle">
