chore: Use different wording in CV page

--- a/en/cv/index.html
+++ b/en/cv/index.html
@@ -86,7 +86,7 @@
     <div class="media col-sm-12 avatar">
         <div class="panel panel-primary">
             <div class="panel-heading">
-                <h1 class="title">Luis Montealegre <small>Web Developer</small></h1>
+                <h1 class="title">Luis Montealegre <small>Software engineer</small></h1>
             </div>
             <div class="panel-body">
                 <div class="media-left media-middle">
