Add Jessica Kerr talk

--- a/talks/index.html
+++ b/talks/index.html
@@ -957,6 +957,32 @@
             </div>
         </div>
     </div>
+    <div class="col-sm-6">
+        <div class="panel">
+            <div class="media">
+                <div class="media-left">
+                    <a href="https://www.youtube.com/watch?v=W9I4loWogqw">
+                        <img
+                            class="media-object"
+                            src="https://i3.ytimg.com/vi/W9I4loWogqw/1.jpg"
+                            alt="Shared mental models"
+                        >
+                    </a>
+                </div>
+                <div class="media-body">
+                    <h4 class="media-heading">
+                        Shared mental models <small>Jessica Kerr</small>
+                    </h4>
+                    <p>
+                        Systems are more than their parts and more than the interaction between the parts.
+                        You don’t hire star developers, put them together, and poof get a great team.
+                        It’s the other way around.
+                        When developers form a great team, the team makes us into great developers.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
 </main>            </div>
         </div>
     </div>
