feat: Add Ulrika Malmgren talk

--- a/talks/index.html
+++ b/talks/index.html
@@ -983,6 +983,30 @@
             </div>
         </div>
     </div>
+    <div class="col-sm-6">
+        <div class="panel">
+            <div class="media">
+                <div class="media-left">
+                    <a href="http://videos.ncrafts.io/video/275529963">
+                        <img
+                            class="media-object"
+                            src="https://i.vimeocdn.com/video/709897289_100x75.jpg"
+                            alt="Committing to quality"
+                        >
+                    </a>
+                </div>
+                <div class="media-body">
+                    <h4 class="media-heading">
+                        Committing to quality <small>Ulrika Malmgren</small>
+                    </h4>
+                    <p>
+                        3 factors which impact quality in software teams: the conversations they have, the ways they
+                        work and how much they care about their craft (testing & programming).
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
 </main>            </div>
         </div>
     </div>
